@@ -1,3 +1,7 @@
+2007-08-14  Hubert Figuiere  <hub@figuiere.net>
+
+	* New API xmp_delete_localized_text(), by Ian Jacobi.
+
 2007-08-13  Hubert Figuiere  <hub@figuiere.net>
 
 	* source/XMPCore/, public/include/: new call DeleteLocalizedText()
